created userscontroller.js, user.js files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project1",
+  "name": "authenticationsystem",
   "version": "1.0.0",
   "description": "node and express course",
   "main": "index.js",
